--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^2.0.1",
     "@types/nprogress": "^0.2.3",
+    "axios": "^1.6.4",
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "nprogress": "^0.2.0",
     "react": "^18",
