--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_APP_NAME = MyApp_LOCAL
 NEXT_PUBLIC_ISOPEN_LINELINF = Y
-NEXT_PUBLIC_CMU_SERVICE = https://apisdd.scmc.cmu.ac.th
-
+#NEXT_PUBLIC_CMU_SERVICE = https://apisdd.scmc.cmu.ac.th
+NEXT_PUBLIC_CMU_SERVICE = localhost:80
 #NEXT_PUBLIC_CMU_SERVICE =  https://3e64-202-28-251-53.ngrok-free.app
 NEXT_PUBLIC_TOKEN = d2lzZG9tc2NsZW5zaW5n
