--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.6.4",
     "dotenv": "^16.3.1",
     "next": "14.0.4",
+    "next-qrcode": "^2.5.1",
     "nprogress": "^0.2.0",
+    "qrcode": "^1.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.0.4"
@@ -27,6 +29,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "html5-qrcode": "^2.3.8",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
